<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
  <class>ParseFile</class>
  <widget class="QDialog" name="ParseFile">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>620</width>
      <height>150</height>
     </rect>
    </property>
    <property name="windowTitle">
      <string>Parse File</string>
    </property>
    <widget class="QWidget" name="centralWidget">
      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
          <layout class="QHBoxLayout" name="horizontalLayout2">
            <item>
              <widget class="QLabel" name="label_FolderFile">
                <property name="text">
                  <string>Folder/File</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
            <item>
              <widget class="QLineEdit" name="edit_FolderFile">
               <property name="minimumWidth">
                <number>400</number>
               </property>
               <property name="maximumWidth">
                <number>400</number>
               </property>
             </widget>
            </item>
            <item>
              <widget class="QPushButton" name="button_Browse">
                <property name="text">
                  <string>Browse</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
          </layout>
        </item>
        <item>
          <layout class="QHBoxLayout" name="horizontalLayout2">
            <item>
              <widget class="QLabel" name="label_ctags">
                <property name="text">
                  <string>ctags binary</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
            <item>
              <widget class="QLineEdit" name="edit_ctags">
               <property name="minimumWidth">
                <number>400</number>
               </property>
               <property name="maximumWidth">
                <number>400</number>
               </property>
             </widget>
            </item>
            <item>
              <widget class="QPushButton" name="button_BrowseCtags">
                <property name="text">
                  <string>Browse</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
          </layout>
        </item>

        <item>
          <widget class="QFrame" name="split_line1">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>620</width>
              <height>1</height>
             </rect>
            </property>
          </widget>
        </item>

        <item>
          <layout class="QHBoxLayout" name="horizontalLayout2">
            <item>
             <widget class="QRadioButton" name="radioFile">
              <property name="text">
               <string>Parse Whole File</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QRadioButton" name="radioFunction">
              <property name="text">
               <string>Parse Function By Function(Use ctags)</string>
              </property>
             </widget>
            </item>
          </layout>
        </item>

        <item>
          <widget class="QFrame" name="split_line2">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>620</width>
              <height>1</height>
             </rect>
            </property>
          </widget>
        </item>

        <item>
          <layout class="QHBoxLayout" name="horizontalLayout2">
            <item>
              <widget class="QPushButton" name="button_OK">
                <property name="text">
                  <string>OK</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
            <item>
              <widget class="QPushButton" name="button_Cancel">
                <property name="text">
                  <string>Cancel</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
          </layout>
        </item>
      </layout>
    </widget>
  </widget>
  <resources/>
  <connections/>
</ui>
